[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Results.gd" type="Script" id=1]
[ext_resource path="res://assets/images/crown.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/old_school.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/skull.png" type="Texture" id=4]
[ext_resource path="res://assets/images/return_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/images/return_pressed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Results" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="TopRow" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopRow"]
margin_right = 510.0
margin_bottom = 271.0
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TopRow/MarginContainer"]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 470.0
margin_bottom = 231.0
color = Color( 1, 0, 0, 1 )

[node name="Crown" type="TextureRect" parent="VBoxContainer/TopRow/MarginContainer/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -36.5
margin_right = 42.0
margin_bottom = 36.5
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/TopRow/MarginContainer/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 1"

[node name="Skull" type="TextureRect" parent="VBoxContainer/TopRow/MarginContainer/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -38.0
margin_right = 45.0
margin_bottom = 38.0
texture = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/TopRow"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 271.0
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TopRow/MarginContainer2"]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 470.0
margin_bottom = 231.0
color = Color( 0, 0, 1, 1 )

[node name="Crown" type="TextureRect" parent="VBoxContainer/TopRow/MarginContainer2/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -36.5
margin_right = 42.0
margin_bottom = 36.5
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/TopRow/MarginContainer2/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 2"

[node name="Skull" type="TextureRect" parent="VBoxContainer/TopRow/MarginContainer2/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -38.0
margin_right = 45.0
margin_bottom = 38.0
texture = ExtResource( 4 )

[node name="BottomRow" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 275.0
margin_right = 1024.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/BottomRow"]
margin_right = 510.0
margin_bottom = 271.0
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomRow/MarginContainer3"]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 470.0
margin_bottom = 231.0
color = Color( 0, 1, 0, 1 )

[node name="Crown" type="TextureRect" parent="VBoxContainer/BottomRow/MarginContainer3/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -36.5
margin_right = 42.0
margin_bottom = 36.5
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/BottomRow/MarginContainer3/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 3"

[node name="Skull" type="TextureRect" parent="VBoxContainer/BottomRow/MarginContainer3/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -38.0
margin_right = 45.0
margin_bottom = 38.0
texture = ExtResource( 4 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/BottomRow"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 271.0
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomRow/MarginContainer4"]
visible = false
margin_left = 40.0
margin_top = 40.0
margin_right = 470.0
margin_bottom = 231.0
color = Color( 1, 1, 0, 1 )

[node name="Crown" type="TextureRect" parent="VBoxContainer/BottomRow/MarginContainer4/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -36.5
margin_right = 42.0
margin_bottom = 36.5
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/BottomRow/MarginContainer4/ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 4"

[node name="Skull" type="TextureRect" parent="VBoxContainer/BottomRow/MarginContainer4/ColorRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -38.0
margin_right = 45.0
margin_bottom = 38.0
texture = ExtResource( 4 )

[node name="ReturnButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
